<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-for-unity</name>
  <version>1.0.0</version>
  <description>
  ROS2 for Unity along with a demo scene
  </description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache License 2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
